# wattson

./: LICENSE  README.md  requirements.in  requirements.txt  setup.cfg
.github/workflows/: ci.yml  publish.yml
data/: README.md  aws_instances_dataset.csv  aws_regions_intensity.csv
wattson/: consts.py  data.py  estimator.py  interpolation.py  test_estimator.py  test_interpolation.py  types.py
wattson_datagen/: generate.py  test_generate.py
