[metadata]
name = valohai-wattson
version = attr:wattson.__version__
description = Carbon emissions calculator
long_description = file:README.md
long_description_content_type = text/markdown
author = Valohai
author_email = info@valohai.com
url = https://github.com/valohai/wattson
license = MIT

[options]
python_requires = >=3.7
packages =
    wattson

[options.extras_require]
test =
    pytest
    pytest-cov
dev = 
    black
    flake8
    flake8-isort
    isort
    mypy

[isort]
profile = black
multi_line_output = 3

[flake8]
max-line-length = 88
extend-ignore = E203
